<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:padding="5dp"
    app:cardBackgroundColor="@color/black"
    android:background="@color/black"
    android:layout_height="match_parent">
    
    
   <LinearLayout
       android:layout_margin="15sp"
       android:background="@color/white"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:gravity="center"
           android:textStyle="bold"
           android:textColor="@color/black"
           android:elevation="12dp"
           android:fontFamily="sans-serif"
           android:textSize="20sp"
           android:padding="5dp"
           android:text="Question"
           android:id="@+id/questionTv"/>

       <View
           android:layout_width="match_parent"
           android:layout_height="2dp"
           android:layout_gravity="center"
           android:background="@color/grey"
           android:layout_marginStart="40dp"
           android:layout_marginEnd="40dp"
           android:layout_marginTop="5dp"
           android:layout_marginBottom="5dp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_gravity="center"
           android:gravity="center">

           <Button
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_margin="15dp"
               android:background="@drawable/search_bg"
               android:backgroundTint="@color/green"
               android:textColor="@color/white"
               android:textSize="20sp"
               android:textStyle="bold|italic"
               android:text="@string/yes"
               android:id="@+id/yesButton"/>

           <Button
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_margin="15dp"
               android:background="@drawable/search_bg"
               android:backgroundTint="@color/red"
               android:textColor="@color/white"
               android:textSize="20sp"
               android:textStyle="bold|italic"
               android:text="@string/no"
               android:id="@+id/noButton"/>

       </LinearLayout>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_margin="15dp"
           android:background="@drawable/search_bg"
           android:backgroundTint="@color/green"
           android:textColor="@color/white"
           android:textSize="20sp"
           android:textStyle="bold|italic"
           android:text="@string/done"
           android:id="@+id/doneButton"/>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_margin="15dp"
           android:background="@drawable/search_bg"
           android:backgroundTint="@color/green"
           android:textColor="@color/white"
           android:textSize="20sp"
           android:textStyle="bold|italic"
           android:text="@string/skip"
           android:id="@+id/skipButton"/>

   </LinearLayout>

</androidx.cardview.widget.CardView>