<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SessionsHistory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/sessionQtb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/white"
            android:layout_gravity="top"
            app:navigationIcon="@drawable/back_arrow"
            app:title="@string/sessions"
            app:subtitleTextColor="@color/grey"
            android:background="@color/black"/>

        <RadioGroup
            android:id="@+id/typeGroup"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/maidRadio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/maid"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/customerRadio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/green"
                android:text="@string/customer"
                android:textStyle="bold"
                android:textSize="20sp"/>


        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:isScrollContainer="true"
                android:layout_gravity="center"
                android:id="@+id/sessionRv"/>

            <me.relex.circleindicator.CircleIndicator2
                android:layout_width="5dp"
                android:layout_gravity="center"
                android:background="@color/black"
                android:layout_marginEnd="3dp"
                android:layout_height="wrap_content"
                android:id="@+id/rvQuestionIndicator"/>
        </LinearLayout>




    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>