<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <androidx.cardview.widget.CardView app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_margin="15sp"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="serif"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="Question 1"
                app:drawableStartCompat="@drawable/ic_question_" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:background="@drawable/search_bg"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:text="@string/yes"
                    android:id="@+id/yesButton"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:background="@drawable/search_bg"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:text="@string/no"
                    android:id="@+id/noButton"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey"/>

            <TextView
                android:id="@+id/questionTv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="serif"
                android:drawablePadding="10dp"
                android:padding="5dp"
                android:text="Question 2"
                app:drawableStartCompat="@drawable/ic_question_" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grey"/>

            <EditText
                android:id="@+id/answerField2"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColorHint="@color/grey"
                android:hint="@string/write_answer_here"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/search_bg"
                android:backgroundTint="@color/green"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:text="@string/done"
                android:id="@+id/doneButton"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/search_bg"
                android:backgroundTint="@color/red"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:text="@string/skip"
                android:id="@+id/skipButton"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>